# QuiteEcho

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  Package.swift  README.md  appcast.xml  pyproject.toml
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
Resources/: AppIcon.icns  Info.plist
Sources/QuiteEcho/: ASRBridge.swift  AppDelegate.swift  AudioRecorder.swift  BootstrapManager.swift  Config.swift  CursorLocator.swift  HomeView.swift  HotkeyManager.swift  MainWindow.swift  ModelsView.swift  OverlayPanel.swift  PasteService.swift  SettingsView.swift  Stats.swift  StatusBar.swift  UpdateChecker.swift  UpdateDriver.swift  UpdatePopover.swift
meta/: asr-memory-profiling.md  download-progress-investigation.md  sparkle-integration.md
scripts/: asr_worker.py  bump-version.sh
scripts/asr-memprobe/: Package.swift
scripts/asr-memprobe/Sources/ASRMemProbe/: main.swift
